--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.35.0",
+    "@strapi/plugin-cloud": "^5.9.0",
     "@strapi/plugin-users-permissions": "5.35.0",
     "@strapi/strapi": "5.35.0",
     "better-sqlite3": "12.4.1",
+    "pg": "^8.18.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
